--- a/rust-worker/Cargo.toml
+++ b/rust-worker/Cargo.toml
@@ -11,6 +11,8 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
+async-trait = "0.1.73"
+futures = "0.3.28"
 lol_html = "1.2.0"
 reqwest = { version="0.11.20", features = ["json"] }
 worker = "0.0.15"
