--- a/rust-worker/Cargo.toml
+++ b/rust-worker/Cargo.toml
@@ -15,6 +15,7 @@ async-trait = "0.1.73"
 futures = "0.3.28"
 lol_html = "1.2.0"
 reqwest = { version="0.11.20", features = ["json"] }
+serde_json = "1.0.107"
 worker = "0.0.15"
 
 [profile.release]
